# goal-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  llms.txt  pyproject.toml
.agents/skills/goal-cli/: SKILL.md
.agents/skills/goal-cli/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: goal-cli-instincts.yaml
.claude/research/: goal-cli-research-playbook.md
.codex/: AGENTS.md
.github/workflows/: ci.yml
docs/: artifact-goal-notes.md  cli-reference.md  codex-goal-openai-implementation-report.md  config-schema.md  installation.md  skills.md
examples/economics-paper-checklist/: goal.toml
examples/economics-paper-checklist/checklists/: dp16276-manual-results.example.json  dp16276-tdd-checklist.md
examples/economics-paper-checklist/scripts/: checklist_review.py
examples/scientificity/: goal.toml
examples/scientificity-claude/: goal.toml
examples/scientificity-claude-tik/: goal.toml
examples/scientificity/scripts/: ai4ss_autochecklist_review.py  autochecklist_deepseek_pro_max.py  goal_tik_ai4ss_autochecklist_review.py  run_autochecklist_deepseek_reasoned_score.py
skills/goal-cli-project-setup/: SKILL.md
skills/goal-cli-template-author/: SKILL.md
src/goal_cli/: adapters.py  cli.py  config.py  isolation.py  no_mistakes.py  observability.py  provider_contract.py  runtime.py  setup_check.py  supervisor.py  system_heartbeat.py  tok_execution.py  transaction.py
tests/: test_cli.py  test_deep_modules.py  test_isolation.py  test_no_mistakes.py  test_perpetual.py  test_provider_contract.py  test_runtime.py  test_setup_check.py  test_skill_distribution.py  test_supervisor.py  test_system_heartbeat.py  test_transactions.py
